Changed everything a bit :p

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
+        <title>CWCLAN [CW] - PHP Fusion Theme HTML5 Draft</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
 		<link rel='shortcut icon' href='favicon.ico' type='image/x-icon' />
