--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 		
 		<!-- CSS -->
 		<link rel="stylesheet" href="css/bootstrap.min.css">
+		<link rel="stylesheet" href="css/bootstrap-responsive.min.css">
         <link rel="stylesheet" href="css/normalize.min.css">
         <link rel="stylesheet" href="css/icomoon.css">
         <link rel="stylesheet" href="css/main.css">
@@ -26,6 +27,9 @@
 		<!-- Scripts -->
         <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
         <script src="js/vendor/bootstrap.min.js"></script>
+        <script>
+        $(".btn-navbar").collapse()
+        </script>
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -43,14 +47,27 @@
 			
 			<div class='hero'></div>
 		
-			<div class='navigation'>
-				<ul>
-					<li>Home</li>
-					<li>Servers</li>
-					<li>Fotogalerie</li>
-					<li>Impressum</li>
-				</ul>
-			</div>
+			<div class="navbar navbar-inverse">
+			<div class='container'>
+			  <div class="navbar-inner">
+			    <div class="container">
+					<!-- .btn-navbar is used as the toggle for collapsed navbar content -->
+					<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</a>
+					<div class='nav-collapse collapse'>
+					<ul class="nav">
+						<li><a href="#">Home</a></li>
+						<li><a href="#">Link</a></li>
+						<li><a href="#">Link</a></li>
+					</ul>
+					</div>
+			    </div>
+			  </div>
+			 </div>
+			 </div>
 		
 			<div class='main clearfix'>
 				<div class='content'>
