--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 			  <div class="navbar-inner">
 			    <div class="container">
 					<!-- .btn-navbar is used as the toggle for collapsed navbar content -->
+					<div class='navi_hint no-pc'><a data-toggle="collapse" data-target=".nav-collapse">Navigation</a></div>
 					<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
@@ -55,9 +56,30 @@
 					</a>
 					<div class='nav-collapse collapse'>
 					<ul class="nav">
-						<li><a href="#">Home</a></li>
+						<li><a href="#">Startseite</a></li>
+						<li><a href="#">Forum</a></li>
 						<li><a href="#">Link</a></li>
-						<li><a href="#">Link</a></li>
+						<li class="dropdown">
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown">
+							  Fotogalerie
+							  <b class="caret"></b>
+							</a>
+							<ul class="dropdown-menu">
+								<li><a href="#">Neue Bilder</a></li>
+								<li><a href="#">Meist angesehene Bilder</a></li>
+							</ul>
+						</li> <!-- Dropdown End -->
+						<li class="dropdown">
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown">
+							  Server
+							  <b class="caret"></b>
+							</a>
+							<ul class="dropdown-menu">
+								<li><a href="#">HLStats</a></li>
+								<li><a href="#">Map Bewertungen</a></li>
+								<li><a href="#">Reserved Slots</a></li>
+							</ul>
+						</li> <!-- Dropdown End -->
 					</ul>
 					</div>
 			    </div>
