Added Demo Forum View (Only PC, because Bootstrap has no responsive tables) + Forum Infusion Styles

--- a/index.html
+++ b/index.html
@@ -94,26 +94,27 @@
 		<div class='main clearfix'>
 			<div class='content'>
 			
-				<div class='welcome no-mobile no-tabletbook'>
-						<h3>Uh a PC, welcome! Yaay.</h3>
-						<p>
-						Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-						</p>
-					</div>
-			
-				<div class='welcome no-pc no-tabletbook'>
-						<h3>Mobile.</h3>
-						<p>
-						Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-						</p>
-					</div>
-				
-				<div class='welcome no-pc no-mobile'>
-						<h3>Tablet / Small resolution device.</h3>
-						<p>
-						Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-						</p>
-					</div>
+				<div class='infusion_forum no-tabletbook no-mobile'>
+					<table class='table table-striped table-condensed'>
+					<tbody>
+						<tr>
+							<th>&nbsp;</th><th>Forum / Topic</th><th>Author</th><th>Views</th><th>Antworten</th><th>letzter Post</th>
+						</tr>
+						<tr>
+							<td><img src='http://www.cwclan.de/themes/TF2-Teamjoin/forum/folder.png'></td><td><div class='forum'>Spam</div><span class='topic'><a href='#'>Quote Thread</a></span></td><td><a href='#'>dizAmbiguation</a></td><td>8488</td><td>101</td><td><div class='datetime'>05.05.2013 22:08</div>
+<a href='#'>UFeindschiff</a></td>
+						</tr>
+						<tr>
+							<td><img src='http://www.cwclan.de/themes/TF2-Teamjoin/forum/folder.png'></td><td><div class='forum'>Gameserver</div><span class='topic'><a href='#'>Minecraft Server News</a></span></td><td><a href='#'>globeFrEak</a></td><td>289</td><td>0</td><td><div class='datetime'>04.05.2013 12:33</div>
+<a href='#'>globeFrEak</a></td>
+						</tr>
+						<tr>
+							<td><img src='http://www.cwclan.de/themes/TF2-Teamjoin/forum/folder.png'></td><td><div class='forum'>Diskussion</div><span class='topic'><a href='#'>Daily Ohrwurm</a></span></td><td><a href='#'>the ELM</a></td><td>187648</td><td>2756</td><td><div class='datetime'>03.05.2013 23:51</div>
+<a href='#'>Oceanic</a></td>
+						</tr>
+					</tbody>
+					</table>
+				</div>
 			
 				<article>
 						<h3>Some Article</h3>
