Added more Demo Content & modified some CSS Stuff.

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 					<table class='table table-striped table-condensed'>
 					<tbody>
 						<tr>
-							<th>&nbsp;</th><th>Forum / Topic</th><th>Author</th><th>Views</th><th>Antworten</th><th>letzter Post</th>
+							<th>&nbsp;</th><th>Forum / Topic</th><th>Autor</th><th>Views</th><th>Antworten</th><th>letzter Post</th>
 						</tr>
 						<tr>
 							<td><img src='http://www.cwclan.de/themes/TF2-Teamjoin/forum/folder.png'></td><td><div class='forum'>Spam</div><span class='topic'><a href='#'>Quote Thread</a></span></td><td><a href='#'>dizAmbiguation</a></td><td>8488</td><td>101</td><td><div class='datetime'>05.05.2013 22:08</div>
@@ -117,34 +117,58 @@
 				</div>
 			
 				<article>
-						<h3>Some Article</h3>
+						<h3><a href='#'>CWClan Stammtisch #1 - Jetzt geht's los!</a></h3>
 						<div class='article_submenu clearfix'>
 							<span class='author'>
-								Veröffentlicht von: <span class='c_orange'>Padme</span>
+								Veröffentlicht von: <a href='#'>nevo</a>
 							</span>
 							<span class='comments'>
-								<span class='c_orange'>15 Kommentare</span> <span class='icons icon-bubbles'></span>
+								<a href='#'>5 Kommentare</a> <span class='icons icon-bubbles'></span>
 							</span>
 						</div>
 						<p class='article'>
-						Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+						<img src='http://www.cwclan.de/images/cwstammtisch_01.png'><br>
+							<p align='center'>
+								CWClan - Stammtisch #1<br>
+							</p>
+							<p>
+CWClan Geister erhebet euch... Okay, falscher Text. Passiert den besten... <br>
+Nichts destrotrotz dürft auch ihr euch "erheben" und an unserem 1. CWClan Stammtisch teilnehmen...
+							</p>
 						</p>
 					</article>
 				
 				<article>
-						<h3>Some Article</h3>
+						<h3><a href='#'>Wir sind ein Verein!</a></h3>
 						<div class='article_submenu clearfix'>
 							<span class='author'>
-								Veröffentlicht von: <span class='c_orange'>Luke</span>
+								Veröffentlicht von: <a href='#'>Indigo</a>
 							</span>
 							<span class='comments'>
-								<span class='c_orange'>7 Kommentare</span> <span class='icons icon-bubbles'></span>
+								<a href='#'>10 Kommentare</a> <span class='icons icon-bubbles'></span>
 							</span>
 						</div>
 						<p class='article'>
-						Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+							<img src='http://www.cwclan.de/images/news/cwclan_logo_tf2_bw_klein.png' align='left'>
+							Wie einige wissen, haben wir durchaus ab und an mal Finanzierungsprobleme und selbst Moody´s hat uns schon mit einer  Abwertung der Kreditwürdigkeit gedroht.<br>
+ 
+<b>Also nun zum Thema:</b>
+ Ab dem 2. Quartal 2013, also ab heute, sind wir ein e.V. (eingetragener Verein), was uns in die Lage versetzt, durch Werbung sowohl auf dem Server als auch auf unserer Seite Geld zu verdienen.
+weiteres findet ihr unter <a href='#'>mehr lesen...</a>
 						</p>
 					</article>
+				
+				<div class="pagination pagination-centered">
+					<ul>
+						<li><a href="#">Prev</a></li>
+						<li><a href="#">1</a></li>
+						<li><a href="#">2</a></li>
+						<li><a href="#">3</a></li>
+						<li><a href="#">4</a></li>
+						<li><a href="#">5</a></li>
+						<li><a href="#">Next</a></li>
+					</ul>
+				</div>
 			</div>
 			
 			<div class='sidebar'>
@@ -153,8 +177,8 @@
 					<p class='image_box'>
 					<img src='http://www.cwclan.de/images/photoalbum/album_3/img_5741_t1.jpg'><br>
 					Kommentare: 18<br>
-					<span class='c_orange'>Clan Tower</span><br>
-					<span class='c_orange'>neue Fotos</span>
+					<a href='#'>Clan Tower</a><br>
+					<a href='#'>neue Fotos</a>
 					</p>
 				</div>
 			</div>
