- Add disabled and active states by pagination - fontsize mumble panel

--- a/index.html
+++ b/index.html
@@ -92,8 +92,7 @@
             </div>
 
             <div class="main clearfix">
-                <div class="content">
-
+                <div class="content">                  
                     <div class="infusion_forum no-tabletbook no-mobile">
                         <table class="table table-striped table-condensed">
                             <tbody>
@@ -139,7 +138,7 @@
                     </article>
 
                     <article>
-                        <h3><a href="#">Wir sind ein Verein!</a></h3>
+                        <h3><a href="#">Wir sind ein Verein!</a></h3>                       
                         <div class="article_submenu clearfix">
                             <span class="author">
                                 Veröffentlicht von: <a href="#">Indigo</a>
@@ -160,13 +159,13 @@
 
                     <div class="pagination pagination-centered">
                         <ul>
-                            <li><a href="#">Prev</a></li>
-                            <li><a href="#">1</a></li>
+                            <li class="disabled"><a href="#">&laquo;</a></li>
+                            <li class="active"><a href="#">1</a></li>
                             <li><a href="#">2</a></li>
                             <li><a href="#">3</a></li>
                             <li><a href="#">4</a></li>
                             <li><a href="#">5</a></li>
-                            <li><a href="#">Next</a></li>
+                            <li><a href="#">&raquo;</a></li>
                         </ul>
                     </div>
                 </div>
