Start adding bootstrap responsive menu for login at the topbar
ich glaub wir könnten das bootstrap ma so umschreiben das man nicht
zwingen dafür eine .navbar braucht, weil die topbar ist ja keine :p

--- a/index.html
+++ b/index.html
@@ -37,8 +37,15 @@
         <![endif]-->
 
         <!-- START OF CONTENT -->
-        <div class="topbar">
-            <span class="title">CWClan</span> <span class="subtitle">Clan & Community</span>
+        <div class="topbar navbar">
+            <div class="title">CWClan <span class="subtitle">Clan & Community</span></div>
+            <div class="navi_hint no-pc"><a data-toggle="collapse" data-target=".login"></a></div>
+                            <a class="btn btn-navbar" data-toggle="collapse" data-target=".login">
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                            </a>
+                <div class="login collapse"><form><input type="text" placeholder="Loginname"><input type="password" placeholder="Passwort"></form></div>
         </div>
 
         <div class="wrapper clearfix">
