Changed the Login and other things

--- a/index.html
+++ b/index.html
@@ -1,3 +1,16 @@
+<!--
+  -- CWClan HTML5 Theme for PHP-Fusion
+  -- Version: 0.2
+  --
+  -- Copyright 2013 CWClan
+  -- Licensed -/-
+  --
+  -- Homepage: http://www.cwclan.de
+  -- Source: https://github.com/ununseptium/cwclan-html5-newish
+  --
+  -- made by ununseptium@github and globeFrEak@github
+  -->
+
 <!DOCTYPE html>
 <!--[if lte IE 7]>	<script src="js/lte-ie7.js"></script><![endif]-->
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
@@ -19,8 +32,8 @@
         <title>CWCLAN [CW] - PHP Fusion Theme HTML5 Draft</title>
 
         <!-- CSS -->
-        <link rel="stylesheet" href="css/bootstrap.min.css">
-        <link rel="stylesheet" href="css/bootstrap-responsive.min.css">
+        <link rel="stylesheet" href="css/bootstrap.css">
+        <link rel="stylesheet" href="css/bootstrap-responsive.css">
         <link rel="stylesheet" href="css/normalize.min.css">
         <link rel="stylesheet" href="css/icomoon.css">
         <link rel="stylesheet" href="css/main.css">
@@ -45,7 +58,13 @@
                                 <span class="icon-bar"></span>
                                 <span class="icon-bar"></span>
                             </a>
-                <div class="login collapse"><form><input type="text" placeholder="Loginname"><input type="password" placeholder="Passwort"></form></div>
+                <div class="nav-collapse login collapse">
+                    <form>
+                        <input type="text" placeholder="Login"> 
+                        <input type="password" placeholder="Passwort"> 
+                        <input type="submit" class="cw-btn">
+                    </form>
+                </div>
         </div>
 
         <div class="wrapper clearfix">
