--- a/index.html
+++ b/index.html
@@ -59,11 +59,43 @@
                                 <span class="icon-bar"></span>
                             </a>
                 <div class="nav-collapse login collapse">
-                    <form>
-                        <input type="text" placeholder="Login"> 
-                        <input type="password" placeholder="Passwort"> 
-                        <input type="submit" class="cw-btn">
-                    </form>
+                    <div class="no-tabletbook no-mobile"> <!-- PC Resolution Login -->
+                        <form style="margin-top:-7px">
+                            <input type="text" name="login-name" placeholder="Login"> 
+                            <input type="password" name="password" placeholder="Passwort"> 
+                            <input type="submit" class="cw-btn">
+                        </form>
+                        <div class="login-info"><a href="#">Registrieren</a>&nbsp;&nbsp;&nbsp;<a href="#">Passwort vergessen</a></div>
+                    </div>
+                    <div class="no-pc"> <!-- Mobile / Tabletbook Resolution Login -->
+                        <div class="responsive-login">
+                            <div class="login-box-r">
+                            <table class="table table-condensed">
+                                <tr>
+                                    <td>
+                                        <div align="center">
+                                            <input type="text" name="login-name" placeholder="Login">
+                                        </div>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <div align="center">
+                                            <input type="password" name="password" placeholder="Password">
+                                        </div>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <div align="center">
+                                            <input type="submit" value="Einloggen" class="cw-btn">
+                                        </div>
+                                    </td>
+                                </tr>
+                            </table>
+                            </div>
+                        </div>
+                    </div>
                 </div>
         </div>
 
@@ -78,13 +110,13 @@
                     <div class="navbar-inner">
                         <div class="container">
                             <!-- .btn-navbar is used as the toggle for collapsed navbar content -->
-                            <div class="navi_hint no-pc"><a data-toggle="collapse" data-target=".nav-collapse">Navigation</a></div>
-                            <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                            <div class="navi_hint no-pc"><a data-toggle="collapse" data-target=".nav-toggle">Navigation</a></div>
+                            <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-toggle">
                                 <span class="icon-bar"></span>
                                 <span class="icon-bar"></span>
                                 <span class="icon-bar"></span>
                             </a>
-                            <div class="nav-collapse collapse">
+                            <div class="nav-toggle nav-collapse collapse">
                                 <ul class="nav">
                                     <li><a href="#">Startseite</a></li>
                                     <li><a href="#">Forum</a></li>
@@ -142,7 +174,7 @@
                     </div>
 
                     <article>
-                        <h3><a href="#">CWClan Stammtisch #1 - Jetzt geht"s los!</a></h3>
+                        <h3><a href="#">CWClan Stammtisch #1 - Jetzt geht's los!</a></h3>
                         <div class="article_submenu clearfix">
                             <span class="author">
                                 Veröffentlicht von: <a href="#">nevo</a>
@@ -153,13 +185,13 @@
                         </div>
                         <p class="article">
                             <img src="http://www.cwclan.de/images/cwstammtisch_01.png"><br>
-                        <p align="center">
-                            CWClan - Stammtisch #1<br>
-                        </p>
-                        <p>
-                            CWClan Geister erhebet euch... Okay, falscher Text. Passiert den besten... <br>
-                            Nichts destrotrotz dürft auch ihr euch "erheben" und an unserem 1. CWClan Stammtisch teilnehmen...
-                        </p>
+                            <p align="center">
+                                CWClan - Stammtisch #1<br>
+                            </p>
+                            <p>
+                                CWClan Geister erhebet euch... Okay, falscher Text. Passiert den besten... <br>
+                                Nichts destrotrotz dürft auch ihr euch "erheben" und an unserem 1. CWClan Stammtisch teilnehmen...
+                            </p>
                         </p>
                     </article>
 
@@ -235,7 +267,6 @@
             </div>
 
             <div class="footer">(c) 2013 <span class="c_orange">cwclan</span> - clan & community</div>
-        </div>
 
         <!-- END OF CONTENT -->
 
