changed a few things

--- a/index.html
+++ b/index.html
@@ -92,6 +92,13 @@
                                         </div>
                                     </td>
                                 </tr>
+                                <tr>
+                                    <td>
+                                        <div align="center">
+                                            <a href="#">Registrieren</a>&nbsp;&nbsp;&nbsp;<a href="#">Passwort vergessen</a>
+                                        </div>
+                                    </td>
+                                </tr>
                             </table>
                             </div>
                         </div>
@@ -158,15 +165,15 @@
                                     <th>&nbsp;</th><th>Forum / Topic</th><th>Autor</th><th>Views</th><th>Antworten</th><th>letzter Post</th>
                                 </tr>
                                 <tr>
-                                    <td><img src="http://www.cwclan.de/themes/TF2-Teamjoin/forum/folder.png"></td><td><div class="forum">Spam</div><span class="topic"><a href="#">Quote Thread</a></span></td><td><a href="#">dizAmbiguation</a></td><td>8488</td><td>101</td><td><div class="datetime">05.05.2013 22:08</div>
+                                    <td><img src="http://www.cwclan.de/themes/TF2-Teamjoin/forum/folder.png" alt="folder.png"></td><td><div class="forum">Spam</div><span class="topic"><a href="#">Quote Thread</a></span></td><td><a href="#">dizAmbiguation</a></td><td>8488</td><td>101</td><td><div class="datetime">05.05.2013 22:08</div>
                                         <a href="#">UFeindschiff</a></td>
                                 </tr>
                                 <tr>
-                                    <td><img src="http://www.cwclan.de/themes/TF2-Teamjoin/forum/folder.png"></td><td><div class="forum">Gameserver</div><span class="topic"><a href="#">Minecraft Server News</a></span></td><td><a href="#">globeFrEak</a></td><td>289</td><td>0</td><td><div class="datetime">04.05.2013 12:33</div>
+                                    <td><img src="http://www.cwclan.de/themes/TF2-Teamjoin/forum/folder.png" alt="folder.png"></td><td><div class="forum">Gameserver</div><span class="topic"><a href="#">Minecraft Server News</a></span></td><td><a href="#">globeFrEak</a></td><td>289</td><td>0</td><td><div class="datetime">04.05.2013 12:33</div>
                                         <a href="#">globeFrEak</a></td>
                                 </tr>
                                 <tr>
-                                    <td><img src="http://www.cwclan.de/themes/TF2-Teamjoin/forum/folder.png"></td><td><div class="forum">Diskussion</div><span class="topic"><a href="#">Daily Ohrwurm</a></span></td><td><a href="#">the ELM</a></td><td>187648</td><td>2756</td><td><div class="datetime">03.05.2013 23:51</div>
+                                    <td><img src="http://www.cwclan.de/themes/TF2-Teamjoin/forum/folder.png" alt="folder.png"></td><td><div class="forum">Diskussion</div><span class="topic"><a href="#">Daily Ohrwurm</a></span></td><td><a href="#">the ELM</a></td><td>187648</td><td>2756</td><td><div class="datetime">03.05.2013 23:51</div>
                                         <a href="#">Oceanic</a></td>
                                 </tr>
                             </tbody>
@@ -192,7 +199,6 @@
                                 CWClan Geister erhebet euch... Okay, falscher Text. Passiert den besten... <br>
                                 Nichts destrotrotz dürft auch ihr euch "erheben" und an unserem 1. CWClan Stammtisch teilnehmen...
                             </p>
-                        </p>
                     </article>
 
                     <article>
@@ -206,7 +212,7 @@
                             </span>
                         </div>
                         <p class="article">
-                            <img src="http://www.cwclan.de/images/news/cwclan_logo_tf2_bw_klein.png" align="left">
+                            <img src="http://www.cwclan.de/images/news/cwclan_logo_tf2_bw_klein.png" align="left" img="tf2_bw_klein">
                             Wie einige wissen, haben wir durchaus ab und an mal Finanzierungsprobleme und selbst Moody´s hat uns schon mit einer  Abwertung der Kreditwürdigkeit gedroht.<br>
 
                             <b>Also nun zum Thema:</b>
