--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   -- Source: https://github.com/ununseptium/cwclan-html5-newish
   --
   -- made by ununseptium@github and globeFrEak@github
-  -->
+-->
 
 <!DOCTYPE html>
 <!--[if lte IE 7]>	<script src="js/lte-ie7.js"></script><![endif]-->
@@ -53,23 +53,23 @@
         <div class="topbar navbar">
             <div class="title">CWClan <span class="subtitle">Clan & Community</span></div>
             <div class="navi_hint no-pc"><a data-toggle="collapse" data-target=".login"></a></div>
-                            <a class="btn btn-navbar" data-toggle="collapse" data-target=".login">
-                                <span class="icon-bar"></span>
-                                <span class="icon-bar"></span>
-                                <span class="icon-bar"></span>
-                            </a>
-                <div class="nav-collapse login collapse">
-                    <div class="no-tabletbook no-mobile"> <!-- PC Resolution Login -->
-                        <form style="margin-top:-7px">
-                            <input type="text" name="login-name" placeholder="Login"> 
-                            <input type="password" name="password" placeholder="Passwort"> 
-                            <input type="submit" class="cw-btn">
-                        </form>
-                        <div class="login-info"><a href="#">Registrieren</a>&nbsp;&nbsp;&nbsp;<a href="#">Passwort vergessen</a></div>
-                    </div>
-                    <div class="no-pc"> <!-- Mobile / Tabletbook Resolution Login -->
-                        <div class="responsive-login">
-                            <div class="login-box-r">
+            <a class="btn btn-navbar" data-toggle="collapse" data-target=".login">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </a>
+            <div class="nav-collapse login collapse">
+                <div class="no-tabletbook no-mobile"> <!-- PC Resolution Login -->
+                    <form style="margin-top:-7px">
+                        <input type="text" name="login-name" placeholder="Login"> 
+                        <input type="password" name="password" placeholder="Passwort"> 
+                        <input type="submit" class="cw-btn">
+                    </form>
+                    <div class="login-info"><a href="#">Registrieren</a>&nbsp;&nbsp;&nbsp;<a href="#">Passwort vergessen</a></div>
+                </div>
+                <div class="no-pc"> <!-- Mobile / Tabletbook Resolution Login -->
+                    <div class="responsive-login">
+                        <div class="login-box-r">
                             <table class="table table-condensed">
                                 <tr>
                                     <td>
@@ -100,10 +100,10 @@
                                     </td>
                                 </tr>
                             </table>
-                            </div>
                         </div>
                     </div>
                 </div>
+            </div>
         </div>
 
         <div class="wrapper clearfix">
@@ -192,13 +192,13 @@
                         </div>
                         <p class="article">
                             <img src="http://www.cwclan.de/images/cwstammtisch_01.png"><br>
-                            <p align="center">
-                                CWClan - Stammtisch #1<br>
-                            </p>
-                            <p>
-                                CWClan Geister erhebet euch... Okay, falscher Text. Passiert den besten... <br>
-                                Nichts destrotrotz dürft auch ihr euch "erheben" und an unserem 1. CWClan Stammtisch teilnehmen...
-                            </p>
+                        <p align="center">
+                            CWClan - Stammtisch #1<br>
+                        </p>
+                        <p>
+                            CWClan Geister erhebet euch... Okay, falscher Text. Passiert den besten... <br>
+                            Nichts destrotrotz dürft auch ihr euch "erheben" und an unserem 1. CWClan Stammtisch teilnehmen...
+                        </p>
                     </article>
 
                     <article>
@@ -271,9 +271,46 @@
                     </div>
                 </div>
             </div>
-
-            <div class="footer">(c) 2013 <span class="c_orange">cwclan</span> - clan & community</div>
-
+            <footer>(c) 2013 <span class="c_orange">cwclan</span> - clan & community</footer>
+        </div>                    
+        <div class="footernav flleft visible-desktop">
+            <div class="links-section flleft">
+                <h4>Server</h4>                    
+                <ul>
+                    <li>
+                        <a href="#" title="" target="_blank">TF2</a>
+                    </li>
+                    <li>
+                        <a href="#" title="" target="_blank">Minecraft</a>
+                    </li>
+                    <li>
+                        <a href="#" title="" target="_blank">Mumble - Voice Server</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="links-section flleft">
+                <h4>Heißer Stuff</h4>                    
+                <ul>
+                    <li>
+                        <a href="http://timkopplow.com/dev/cwish/" target="_blank" title="Nevo's Responsible Design">Nevo's Responsible Design</a>
+                    </li>
+                    <li>
+                        <a href="#" title="">Test</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="links-section flleft">
+                <h4>Ähm naja halt so</h4>                    
+                <ul>
+                    <li>
+                        <a href="#" title="">Bla Bla Blubb</a>
+                    </li>
+                    <li>
+                        <a href="#" title="">Blubb Bla Blääää</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
         <!-- END OF CONTENT -->
 
         <!-- Scripts -->
