--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                 <h4>Heißer Stuff</h4>                    
                 <ul>
                     <li>
-                        <a href="http://timkopplow.com/dev/cwish/" target="_blank" title="Nevo's Responsible Design">Nevo's Responsible Design</a>
+                        <a href="http://timkopplow.com/dev/cwish/" target="_blank" title="Nevo's Responsive Design">Nevo's Responsive Design</a>
                     </li>
                     <li>
                         <a href="#" title="">Test</a>
