--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/responsive.css">
         <link rel="stylesheet" href="css/cwclan.css">
-        <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Oswald:400,300|Open+Sans+Condensed:300,700|Droid+Serif:400,700">
+        <link href='http://fonts.googleapis.com/css?family=Oswald:400,300|Roboto:400,500|Roboto+Condensed:400,300,700|Roboto+Slab:400,300,700' rel='stylesheet' type='text/css'>
 
         <!-- Scripts -->
         <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
